# rmon

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  rmon-installer.sh
ansible/: .ansible-lint  .yamllint  main.yaml  server-playbook.yaml  test.sh  uninstall-full.yaml  uninstall.yaml
ansible/files/: rmon-client.yaml  rmon-server.service
ansible/molecule/default/: converge.yml  molecule.yml  prepare.yml
ansible/roles/configure-system/files/: rmon-server.yaml
ansible/roles/configure-system/handlers/: main.yaml
ansible/roles/configure-system/tasks/: main.yaml
ansible/roles/configure-system/templates/: rmon.service
ansible/roles/install-src/tasks/: main.yaml
ansible/roles/install/tasks/: main.yaml
ansible/templates/: rmon.service
client/: Cargo.toml  build.rs
client/src/: config.rs  main.rs
client/src/collectors/: mod.rs
client/src/collectors/cpu/: linux.rs  mod.rs
client/src/collectors/cpu/linux/: mod.rs
client/src/collectors/disk/: linux.rs  mod.rs
client/src/collectors/mem/: linux.rs  mod.rs
client/src/collectors/mem/linux/: mod.rs
client/src/collectors/system/: linux.rs  mod.rs
client/src/data_structs/: host_facts.rs  live_metrics.rs  mod.rs
client/src/transport/: mod.rs  send_hostfacts.rs  send_livemetrics.rs
client/src/util/: mod.rs  undetected_disks.rs
proto/: hostfacts.proto  livemetrics.proto
server/: Cargo.toml  build.rs
server/src/: config.rs  main.rs
server/src/db/: mod.rs
server/src/printer/: hostfacts_printer.rs  livemetrics_printer.rs  mod.rs
