[package]
name = "rmon-client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.*"
clap = { version = "4.5.*", features = ["derive", "cargo"] }
exitcode = "1.1.*"
procfs = "0.16.*"
regex = "1.10.*"
