[package]
name = "rmon-client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.*"
clap = { version = "4.5.*", features = ["derive"] }
config = "0.14.*"
exitcode = "1.1.*"
procfs = "0.16.*"
prost = "0.12.*"
regex = "1.10.*"
serde = { version = "1.0.*", features = ["serde_derive"] }
tokio = { version = "1.37.*", features = ["full"] }
tonic = "0.11.*"

[build-dependencies]
tonic-build = "0.11"
