[package]
name = "rmon-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.*"
tokio = { version = "1.37.*", features = ["full"] }
tonic = "0.11.*"
chrono = "0.4.*"
clap = { version = "4.5.*", features = ["derive"] }
regex = "1.10.*"
serde = { version = "1.0.*", features = ["serde_derive"] }
config = "0.14.*"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[build-dependencies]
tonic-build = "0.11"
